--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <th:block th:fragment="styles">
         <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
     </th:block>
-    <title>Document</title>
 </head>
+
 <body>
-    
+    <th:block th:fragment="header">
+        <nav class="navbar navbar-light bg-light px-4">
+            <a class="navbar-brand" href="/">🍕 Pizza Shop</a>
+            <a th:href="@{/pizze}" class="btn btn-outline-primary">Lista delle Pizze</a>
+        </nav>
+    </th:block>
+    <th:block th:fragment="headerHomepage">
+        <nav class="navbar navbar-light bg-light px-4">
+            <a class="navbar-brand" href="/">🍕 Pizza Shop</a>
+        </nav>
+    </th:block>
+
+    <th:block th:fragment="pizze(title)">
+        <div class="d-flex justify-content-between">
+            <h1 class="ps-4" th:text="${title}" />
+            <form th:action="@{/pizze}" method="get" class=" col-6">
+                <div class="input-group">
+                    <input type="text" class="form-control" name="nome" placeholder="Cerca per nome..." th:value="${param.nome}">
+                    <button type="submit" class="btn btn-primary">Cerca</button>
+                </div>
+            </form>
+        </div>
+        <div class="d-flex flex-wrap">
+            <div class="p-4 col-4" th:each="pizza: ${pizze}">
+                <div class="card h-100" th:if="${pizze.size() > 0}" th:object="${pizza}">
+                    <img th:src="@{*{fotoUrl}}" style="width: 100%; height: 250px; object-fit: cover;"
+                        class="card-img-top" alt="...">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <div>
+                            <div class="d-flex align-items-center mb-3">
+                                <h4 th:text="*{nome}" class="pe-3 mb-0 card-title" />
+                                <span th:text="|(*{prezzo}$)|" />
+                            </div>
+                            <p> <span class="fw-bold">Ingredienti: </span>[[*{descrizione}]] </p>
+                        </div>
+                        <a th:href="@{/pizze/{id}(id=*{id})}" class="btn btn-primary w-50">Vai alla pizza</a>
+                    </div>
+                </div>
+                <div th:unless="${pizze.size() > 0}">
+                    <p>Non ci sono pizze al momento</p>
+                </div>
+            </div>
+        </div>
+
+    </th:block>
+
+    <th:block th:fragment="pizzaDetails" th:object="${pizza}">
+        <img th:src="*{fotoUrl}" style="height: 500px; object-fit: cover; width: 100%;">
+
+        <div class="container">
+            <h1 th:text="*{nome}"></h1>
+            <h4 class="text-success" th:text="|*{prezzo} $|"></h4>
+            <p><strong>Ingredienti:</strong> <span th:text="*{descrizione}"></span></p>
+        </div>
+    </th:block>
 </body>
+
 </html>
