--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <th:block th:replace="~{fragments :: header}"></th:block>
+        <th:block th:replace="~{fragments :: header('homePage')}"></th:block>
     </header>
 
     <main>
